Limpieza de código, comentarios, javadoc