@@ -1,7 +1,3 @@
-/*
- * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
- * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
- */
 package com.daw2edudiego.beatpasstfg.service;
 
 import com.daw2edudiego.beatpasstfg.dto.UsuarioCreacionDTO;
@@ -18,147 +14,173 @@ import com.daw2edudiego.beatpasstfg.util.PasswordUtil;
 
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.EntityTransaction;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
+import jakarta.persistence.PersistenceException; // Importar para manejo específico
+import java.util.Collections; // Importar para devolver listas vacías seguras
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
- * Implementación de UsuarioService. Gestiona transacciones y hashing.
+ * Implementación de la interfaz {@link UsuarioService}. Gestiona la lógica de
+ * negocio para las operaciones sobre Usuarios, incluyendo la creación,
+ * consulta, actualización de estado, eliminación y cambio de contraseña. Maneja
+ * las transacciones JPA y utiliza {@link UsuarioRepository} para el acceso a
+ * datos y {@link PasswordUtil} para el hashing de contraseñas.
+ *
+ * @see UsuarioService
+ * @see UsuarioRepository
+ * @see PasswordUtil
+ * @author Eduardo Olalde
  */
 public class UsuarioServiceImpl implements UsuarioService {
 
     private static final Logger log = LoggerFactory.getLogger(UsuarioServiceImpl.class);
     private final UsuarioRepository usuarioRepository;
 
+    /**
+     * Constructor que inicializa el repositorio de usuarios.
+     */
     public UsuarioServiceImpl() {
         this.usuarioRepository = new UsuarioRepositoryImpl();
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public UsuarioDTO crearUsuario(UsuarioCreacionDTO ucDTO) {
-        // ... (Implementación sin cambios) ...
-        log.info("Iniciando creación de usuario con email: {}", ucDTO.getEmail());
+        log.info("Service: Iniciando creación de usuario con email: {}", ucDTO != null ? ucDTO.getEmail() : "null");
+
+        // Validación robusta de entrada
+        if (ucDTO == null || ucDTO.getEmail() == null || ucDTO.getEmail().isBlank()
+                || ucDTO.getPassword() == null || ucDTO.getPassword().isEmpty()
+                || ucDTO.getNombre() == null || ucDTO.getNombre().isBlank()
+                || ucDTO.getRol() == null) {
+            throw new IllegalArgumentException("Datos de usuario (nombre, email, password, rol) son requeridos y no pueden estar vacíos.");
+        }
+        // Podría añadirse validación de longitud/formato de contraseña aquí si es necesario
+        if (ucDTO.getPassword().length() < 8) {
+            throw new IllegalArgumentException("La contraseña debe tener al menos 8 caracteres.");
+        }
+
         EntityManager em = null;
         EntityTransaction tx = null;
-        if (ucDTO == null || ucDTO.getEmail() == null || ucDTO.getEmail().isBlank() || ucDTO.getPassword() == null || ucDTO.getPassword().isEmpty() || ucDTO.getNombre() == null || ucDTO.getNombre().isBlank() || ucDTO.getRol() == null) {
-            log.warn("Intento de crear usuario con datos inválidos/incompletos.");
-            throw new IllegalArgumentException("Datos de usuario incompletos o inválidos.");
-        }
         try {
             em = JPAUtil.createEntityManager();
             tx = em.getTransaction();
             tx.begin();
-            log.debug("Verificando si el email {} ya existe.", ucDTO.getEmail());
-            Optional<Usuario> existenteOpt = usuarioRepository.findByEmail(em, ucDTO.getEmail()); // Usa el repo
-            if (existenteOpt.isPresent()) {
-                log.warn("Intento de crear usuario con email existente: {}", ucDTO.getEmail());
+
+            // Verificar si el email ya existe
+            if (usuarioRepository.findByEmail(em, ucDTO.getEmail()).isPresent()) {
                 throw new EmailExistenteException("El email '" + ucDTO.getEmail() + "' ya está registrado.");
             }
-            log.debug("Mapeando DTO a entidad Usuario");
+
+            // Mapear DTO a entidad
             Usuario usuario = new Usuario();
-            usuario.setNombre(ucDTO.getNombre());
-            usuario.setEmail(ucDTO.getEmail());
+            usuario.setNombre(ucDTO.getNombre().trim());
+            usuario.setEmail(ucDTO.getEmail().trim().toLowerCase()); // Normalizar email
             usuario.setRol(ucDTO.getRol());
-            usuario.setEstado(true);
-            log.debug("Hasheando contraseña para el usuario {}", ucDTO.getEmail());
+            usuario.setEstado(true); // Activo por defecto
+            usuario.setCambioPasswordRequerido(true); // Requiere cambio al primer login
+
+            // Hashear contraseña
             String hashedPassword = PasswordUtil.hashPassword(ucDTO.getPassword());
             usuario.setPassword(hashedPassword);
-            usuario.setCambioPasswordRequerido(true); 
-            log.debug("Guardando entidad Usuario");
+
+            // Guardar la nueva entidad
             usuario = usuarioRepository.save(em, usuario);
+
             tx.commit();
             log.info("Usuario creado exitosamente con ID: {} y email: {}", usuario.getIdUsuario(), usuario.getEmail());
+
             return mapEntityToDto(usuario);
+
         } catch (Exception e) {
-            log.error("Error durante la creación del usuario con email {}: {}", ucDTO.getEmail(), e.getMessage(), e);
-            if (tx != null && tx.isActive()) {
-                log.warn("Realizando rollback de la transacción de creación de usuario.");
-                tx.rollback();
-            }
-            if (e instanceof EmailExistenteException || e instanceof IllegalArgumentException) {
-                throw e;
-            }
-            throw new RuntimeException("Error creando usuario: " + e.getMessage(), e);
+            handleException(e, tx, "crear usuario con email " + (ucDTO != null ? ucDTO.getEmail() : "null"));
+            throw mapException(e); // Relanzar excepción mapeada
         } finally {
-            if (em != null && em.isOpen()) {
-                em.close();
-                log.trace("EntityManager cerrado para crearUsuario.");
-            }
+            closeEntityManager(em);
         }
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public Optional<UsuarioDTO> obtenerUsuarioPorId(Integer id) {
-        // ... (Implementación sin cambios, devuelve DTO) ...
-        log.debug("Buscando usuario por ID: {}", id);
+        log.debug("Service: Buscando usuario (DTO) por ID: {}", id);
+        if (id == null) {
+            log.warn("Intento de obtener usuario con ID nulo.");
+            return Optional.empty();
+        }
         EntityManager em = null;
         try {
             em = JPAUtil.createEntityManager();
-            Optional<Usuario> usuarioOpt = usuarioRepository.findById(em, id);
-            log.info("Resultado de búsqueda para usuario ID {}: {}", id, usuarioOpt.isPresent() ? "Encontrado" : "No encontrado");
-            return usuarioOpt.map(this::mapEntityToDto);
+            return usuarioRepository.findById(em, id).map(this::mapEntityToDto);
         } catch (Exception e) {
-            log.error("Error al obtener usuario por ID {}: {}", id, e.getMessage(), e);
+            log.error("Error al obtener usuario (DTO) por ID {}: {}", id, e.getMessage(), e);
             return Optional.empty();
         } finally {
-            if (em != null && em.isOpen()) {
-                em.close();
-                log.trace("EntityManager cerrado para obtenerUsuarioPorId.");
-            }
+            closeEntityManager(em);
         }
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public Optional<UsuarioDTO> obtenerUsuarioPorEmail(String email) {
-        // ... (Implementación sin cambios, devuelve DTO) ...
-        log.debug("Buscando usuario (DTO) por email: {}", email);
+        log.debug("Service: Buscando usuario (DTO) por email: {}", email);
+        if (email == null || email.isBlank()) {
+            log.warn("Intento de obtener usuario con email nulo o vacío.");
+            return Optional.empty();
+        }
         EntityManager em = null;
         try {
             em = JPAUtil.createEntityManager();
-            Optional<Usuario> usuarioOpt = usuarioRepository.findByEmail(em, email);
-            log.info("Resultado de búsqueda DTO para usuario email {}: {}", email, usuarioOpt.isPresent() ? "Encontrado" : "No encontrado");
-            return usuarioOpt.map(this::mapEntityToDto);
+            return usuarioRepository.findByEmail(em, email).map(this::mapEntityToDto);
         } catch (Exception e) {
-            log.error("Error al obtener usuario DTO por email {}: {}", email, e.getMessage(), e);
+            log.error("Error al obtener usuario (DTO) por email {}: {}", email, e.getMessage(), e);
             return Optional.empty();
         } finally {
-            if (em != null && em.isOpen()) {
-                em.close();
-                log.trace("EntityManager cerrado para obtenerUsuarioPorEmail.");
-            }
+            closeEntityManager(em);
         }
     }
 
-    // --- NUEVO MÉTODO IMPLEMENTADO ---
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public Optional<Usuario> obtenerEntidadUsuarioPorEmailParaAuth(String email) {
-        log.debug("Buscando entidad completa de usuario por email para auth: {}", email);
+        log.debug("Service: Buscando entidad completa de usuario por email para auth: {}", email);
+        if (email == null || email.isBlank()) {
+            log.warn("Intento de obtener entidad de usuario para auth con email nulo o vacío.");
+            return Optional.empty();
+        }
         EntityManager em = null;
         try {
             em = JPAUtil.createEntityManager();
-            // Llama directamente al método del repositorio que devuelve la entidad
-            Optional<Usuario> usuarioOpt = usuarioRepository.findByEmail(em, email);
-            log.info("Resultado de búsqueda de entidad para auth email {}: {}", email, usuarioOpt.isPresent() ? "Encontrado" : "No encontrado");
-            return usuarioOpt; // Devuelve el Optional<Usuario> directamente
+            // Llama directamente al método del repositorio
+            return usuarioRepository.findByEmail(em, email);
         } catch (Exception e) {
             log.error("Error al obtener entidad usuario por email para auth {}: {}", email, e.getMessage(), e);
             return Optional.empty(); // Devuelve vacío en caso de error
         } finally {
-            if (em != null && em.isOpen()) {
-                em.close();
-                log.trace("EntityManager cerrado para obtenerEntidadUsuarioPorEmailParaAuth.");
-            }
+            closeEntityManager(em);
         }
     }
-    // --- FIN NUEVO MÉTODO ---
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public List<UsuarioDTO> obtenerUsuariosPorRol(RolUsuario rol) {
-        // ... (Implementación sin cambios) ...
-        log.debug("Obteniendo usuarios con rol: {}", rol);
+        log.debug("Service: Obteniendo usuarios con rol: {}", rol);
+        if (rol == null) {
+            throw new IllegalArgumentException("El rol no puede ser nulo para buscar usuarios.");
+        }
         EntityManager em = null;
         try {
             em = JPAUtil.createEntityManager();
@@ -169,99 +191,116 @@ public class UsuarioServiceImpl implements UsuarioService {
                     .collect(Collectors.toList());
         } catch (Exception e) {
             log.error("Error obteniendo usuarios por rol {}: {}", rol, e.getMessage(), e);
-            return List.of();
+            return Collections.emptyList(); // Devolver lista vacía segura
         } finally {
-            if (em != null && em.isOpen()) {
-                em.close();
-                log.trace("EntityManager cerrado para obtenerUsuariosPorRol.");
-            }
+            closeEntityManager(em);
         }
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public UsuarioDTO actualizarEstadoUsuario(Integer id, boolean nuevoEstado) {
-        // ... (Implementación sin cambios) ...
-        log.info("Iniciando actualización de estado a {} para usuario ID: {}", nuevoEstado, id);
+        log.info("Service: Iniciando actualización de estado a {} para usuario ID: {}", nuevoEstado, id);
+        if (id == null) {
+            throw new IllegalArgumentException("ID de usuario es requerido para actualizar estado.");
+        }
+
         EntityManager em = null;
         EntityTransaction tx = null;
         try {
             em = JPAUtil.createEntityManager();
             tx = em.getTransaction();
             tx.begin();
-            log.debug("Buscando usuario a actualizar estado con ID: {}", id);
+
+            // Buscar usuario
             Usuario usuario = usuarioRepository.findById(em, id)
-                    .orElseThrow(() -> {
-                        log.warn("Intento de actualizar estado a usuario no existente ID: {}", id);
-                        return new UsuarioNotFoundException("Usuario no encontrado con ID: " + id);
-                    });
+                    .orElseThrow(() -> new UsuarioNotFoundException("Usuario no encontrado con ID: " + id));
+
+            // Si el estado no cambia, no hacer nada (optimización)
+            if (usuario.getEstado().equals(nuevoEstado)) {
+                log.info("El estado del usuario ID {} ya es {}. No se requiere actualización.", id, nuevoEstado);
+                tx.commit(); // Commit aunque no haya cambio
+                return mapEntityToDto(usuario);
+            }
+
+            // Actualizar estado y guardar
             log.debug("Actualizando estado de usuario ID {} a {}", id, nuevoEstado);
             usuario.setEstado(nuevoEstado);
             usuario = usuarioRepository.save(em, usuario); // merge
+
             tx.commit();
             log.info("Estado de usuario ID: {} actualizado a {} correctamente.", id, nuevoEstado);
             return mapEntityToDto(usuario);
+
         } catch (Exception e) {
-            log.error("Error durante la actualización de estado del usuario ID {}: {}", id, e.getMessage(), e);
-            if (tx != null && tx.isActive()) {
-                log.warn("Realizando rollback de la transacción de actualización de estado de usuario.");
-                tx.rollback();
-            }
-            if (e instanceof UsuarioNotFoundException) {
-                throw e;
-            }
-            throw new RuntimeException("Error actualizando estado de usuario: " + e.getMessage(), e);
+            handleException(e, tx, "actualizar estado usuario ID " + id);
+            throw mapException(e);
         } finally {
-            if (em != null && em.isOpen()) {
-                em.close();
-                log.trace("EntityManager cerrado para actualizarEstadoUsuario.");
-            }
+            closeEntityManager(em);
         }
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public void eliminarUsuario(Integer id) {
-        // ... (Implementación sin cambios) ...
-        log.info("Iniciando eliminación de usuario ID: {}", id);
+        log.info("Service: Iniciando eliminación de usuario ID: {}", id);
+        if (id == null) {
+            throw new IllegalArgumentException("ID de usuario es requerido para eliminar.");
+        }
+
         EntityManager em = null;
         EntityTransaction tx = null;
         try {
             em = JPAUtil.createEntityManager();
             tx = em.getTransaction();
             tx.begin();
-            log.debug("Intentando eliminar usuario con ID: {}", id);
+
+            // Intentar eliminar usando el repositorio
             boolean eliminado = usuarioRepository.deleteById(em, id);
+
+            // deleteById ya lanza UsuarioNotFoundException si no lo encuentra
+            // y PersistenceException si hay violación de FK.
+            // Si devuelve false sin excepción, es un caso raro.
             if (!eliminado) {
-                log.warn("No se pudo eliminar usuario ID {}, no encontrado o error previo.", id);
-                throw new UsuarioNotFoundException("Usuario no encontrado o no se pudo eliminar ID: " + id);
+                // Esto no debería ocurrir si deleteById funciona como se espera
+                log.warn("deleteById devolvió false para usuario ID {} sin lanzar excepción.", id);
+                // Podríamos lanzar una excepción genérica o confiar en que deleteById lance la correcta
+                throw new RuntimeException("No se pudo completar la eliminación del usuario ID: " + id);
             }
+
             tx.commit();
-            log.info("Usuario ID: {} eliminado (o marcado para eliminación) correctamente.", id);
+            log.info("Usuario ID: {} eliminado (o marcado para eliminar) correctamente.", id);
+
+        } catch (PersistenceException e) {
+            // Captura específica para violación de FK
+            handleException(e, tx, "eliminar usuario ID " + id);
+            log.error("Error de persistencia al eliminar usuario ID {}. Causa probable: restricciones de FK (festivales, recargas).", id);
+            throw new RuntimeException("No se pudo eliminar el usuario ID " + id + " debido a datos asociados.", e);
         } catch (Exception e) {
-            log.error("Error durante la eliminación del usuario ID {}: {}", id, e.getMessage(), e);
-            if (tx != null && tx.isActive()) {
-                log.warn("Realizando rollback de la transacción de eliminación de usuario.");
-                tx.rollback();
-            }
-            if (e instanceof UsuarioNotFoundException) {
-                throw e;
-            }
-            throw new RuntimeException("Error eliminando usuario: " + e.getMessage() + ". Verifique si tiene datos asociados (ej: festivales).", e);
+            handleException(e, tx, "eliminar usuario ID " + id);
+            throw mapException(e);
         } finally {
-            if (em != null && em.isOpen()) {
-                em.close();
-                log.trace("EntityManager cerrado para eliminarUsuario.");
-            }
+            closeEntityManager(em);
         }
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public void cambiarPassword(Integer userId, String passwordAntigua, String passwordNueva) {
-        log.info("Iniciando cambio de contraseña para usuario ID: {}", userId);
-        // Validación básica de entrada
-        if (userId == null || passwordAntigua == null || passwordAntigua.isEmpty() || passwordNueva == null || passwordNueva.isEmpty()) {
+        log.info("Service: Iniciando cambio de contraseña para usuario ID: {}", userId);
+
+        // Validación de parámetros
+        if (userId == null || passwordAntigua == null || passwordAntigua.isEmpty()
+                || passwordNueva == null || passwordNueva.isEmpty()) {
             throw new IllegalArgumentException("ID de usuario, contraseña antigua y nueva son obligatorios.");
         }
-        if (passwordNueva.length() < 8) { // Misma validación que al crear
+        if (passwordNueva.length() < 8) { // Requisito mínimo
             throw new IllegalArgumentException("La nueva contraseña debe tener al menos 8 caracteres.");
         }
         if (passwordAntigua.equals(passwordNueva)) {
@@ -275,70 +314,50 @@ public class UsuarioServiceImpl implements UsuarioService {
             tx = em.getTransaction();
             tx.begin();
 
-            log.debug("Buscando usuario con ID: {}", userId);
+            // Buscar usuario
             Usuario usuario = usuarioRepository.findById(em, userId)
                     .orElseThrow(() -> new UsuarioNotFoundException("Usuario no encontrado con ID: " + userId));
 
-            log.debug("Verificando contraseña antigua para usuario ID: {}", userId);
+            // Verificar contraseña antigua
             if (!PasswordUtil.checkPassword(passwordAntigua, usuario.getPassword())) {
-                log.warn("Intento de cambio de contraseña fallido (contraseña antigua incorrecta) para usuario ID: {}", userId);
                 throw new PasswordIncorrectoException("La contraseña actual introducida es incorrecta.");
             }
 
-            log.debug("Hasheando nueva contraseña para usuario ID: {}", userId);
+            // Hashear nueva contraseña
             String nuevoHash = PasswordUtil.hashPassword(passwordNueva);
 
             // Actualizar contraseña y marcar cambio como realizado
             usuario.setPassword(nuevoHash);
-            usuario.setCambioPasswordRequerido(false); // <-- Marcar como ya cambiado
+            usuario.setCambioPasswordRequerido(false);
 
-            log.debug("Guardando cambios de contraseña y estado para usuario ID: {}", userId);
+            // Guardar cambios
             usuarioRepository.save(em, usuario); // merge
 
             tx.commit();
             log.info("Contraseña cambiada exitosamente para usuario ID: {}", userId);
 
         } catch (Exception e) {
-            log.error("Error durante el cambio de contraseña para usuario ID {}: {}", userId, e.getMessage(), e);
-            if (tx != null && tx.isActive()) {
-                log.warn("Realizando rollback de la transacción de cambio de contraseña.");
-                tx.rollback();
-            }
-            // Relanzar excepciones específicas o una genérica
-            if (e instanceof UsuarioNotFoundException || e instanceof PasswordIncorrectoException || e instanceof IllegalArgumentException) {
-                throw e;
-            }
-            throw new RuntimeException("Error al cambiar la contraseña: " + e.getMessage(), e);
+            handleException(e, tx, "cambiar contraseña para usuario ID " + userId);
+            throw mapException(e);
         } finally {
-            if (em != null && em.isOpen()) {
-                em.close();
-                log.trace("EntityManager cerrado para cambiarPassword.");
-            }
+            closeEntityManager(em);
         }
     }
-    
+
     /**
-     * Cambia la contraseña de un usuario SIN verificar la contraseña antigua
-     * y marca el flag 'cambioPasswordRequerido' a false.
-     * Usado para el flujo de cambio obligatorio en el primer login.
-     *
-     * @param userId        ID del usuario a modificar.
-     * @param passwordNueva La nueva contraseña en texto plano.
-     * @throws UsuarioNotFoundException Si el usuario no se encuentra.
-     * @throws IllegalArgumentException Si la nueva contraseña es inválida.
-     * @throws RuntimeException Si ocurre un error durante la transacción.
+     * {@inheritDoc}
      */
-    @Override 
+    @Override
     public void cambiarPasswordYMarcarActualizada(Integer userId, String passwordNueva) {
-        log.info("Iniciando cambio de contraseña obligatorio para usuario ID: {}", userId);
-        // Validación básica de entrada
+        log.info("Service: Iniciando cambio de contraseña obligatorio para usuario ID: {}", userId);
+
+        // Validación de parámetros
         if (userId == null || passwordNueva == null || passwordNueva.isEmpty()) {
             throw new IllegalArgumentException("ID de usuario y nueva contraseña son obligatorios.");
         }
-        // Puedes añadir aquí la misma validación de complejidad que usas en otros sitios
-        // if (passwordNueva.length() < 8) {
-        //     throw new IllegalArgumentException("La nueva contraseña debe tener al menos 8 caracteres.");
-        // }
+        if (passwordNueva.length() < 8) { // Requisito mínimo
+            throw new IllegalArgumentException("La nueva contraseña debe tener al menos 8 caracteres.");
+        }
 
         EntityManager em = null;
         EntityTransaction tx = null;
@@ -347,46 +366,40 @@ public class UsuarioServiceImpl implements UsuarioService {
             tx = em.getTransaction();
             tx.begin();
 
-            log.debug("Buscando usuario con ID: {}", userId);
+            // Buscar usuario
             Usuario usuario = usuarioRepository.findById(em, userId)
-                    .orElseThrow(() -> {
-                         log.warn("Intento de cambio obligatorio a usuario no existente ID: {}", userId);
-                         return new UsuarioNotFoundException("Usuario no encontrado con ID: " + userId);
-                     });
+                    .orElseThrow(() -> new UsuarioNotFoundException("Usuario no encontrado con ID: " + userId));
 
-            log.debug("Hasheando nueva contraseña para usuario ID: {}", userId);
+            // Hashear nueva contraseña
             String nuevoHash = PasswordUtil.hashPassword(passwordNueva);
 
             // Actualizar contraseña y marcar cambio como realizado
             usuario.setPassword(nuevoHash);
-            usuario.setCambioPasswordRequerido(false); // <-- Marcar como ya cambiado
+            usuario.setCambioPasswordRequerido(false);
 
-            log.debug("Guardando cambios de contraseña y estado para usuario ID: {}", userId);
+            // Guardar cambios
             usuarioRepository.save(em, usuario); // merge
 
             tx.commit();
             log.info("Contraseña cambiada (obligatorio) exitosamente para usuario ID: {}", userId);
 
         } catch (Exception e) {
-            log.error("Error durante el cambio de contraseña obligatorio para usuario ID {}: {}", userId, e.getMessage(), e);
-            if (tx != null && tx.isActive()) {
-                log.warn("Realizando rollback de la transacción de cambio de contraseña obligatorio.");
-                tx.rollback();
-            }
-            // Relanzar excepciones específicas o una genérica
-            if (e instanceof UsuarioNotFoundException || e instanceof IllegalArgumentException) {
-                throw e;
-            }
-            throw new RuntimeException("Error al cambiar la contraseña obligatoria: " + e.getMessage(), e);
+            handleException(e, tx, "cambiar contraseña obligatoria para usuario ID " + userId);
+            throw mapException(e);
         } finally {
-            if (em != null && em.isOpen()) {
-                em.close();
-                log.trace("EntityManager cerrado para cambiarPasswordYMarcarActualizada.");
-            }
+            closeEntityManager(em);
         }
     }
 
-    // --- Método Privado de Mapeo (sin cambios) ---
+    // --- Métodos Privados de Ayuda (Helpers) ---
+    /**
+     * Mapea una entidad Usuario a su correspondiente UsuarioDTO. Excluye la
+     * contraseña.
+     *
+     * @param u La entidad Usuario.
+     * @return El UsuarioDTO mapeado, o {@code null} si la entidad es
+     * {@code null}.
+     */
     private UsuarioDTO mapEntityToDto(Usuario u) {
         if (u == null) {
             return null;
@@ -397,8 +410,63 @@ public class UsuarioServiceImpl implements UsuarioService {
         dto.setEmail(u.getEmail());
         dto.setRol(u.getRol());
         dto.setEstado(u.getEstado());
+        dto.setCambioPasswordRequerido(u.getCambioPasswordRequerido()); // Incluir este estado
         dto.setFechaCreacion(u.getFechaCreacion());
         dto.setFechaModificacion(u.getFechaModificacion());
         return dto;
+    }
+
+    /**
+     * Manejador genérico de excepciones para métodos de servicio. Realiza
+     * rollback si hay transacción activa y loggea el error.
+     *
+     * @param e La excepción capturada.
+     * @param tx La transacción activa (puede ser null).
+     * @param action Descripción de la acción que falló.
+     */
+    private void handleException(Exception e, EntityTransaction tx, String action) {
+        log.error("Error durante la acción '{}': {}", action, e.getMessage(), e);
+        if (tx != null && tx.isActive()) {
+            try {
+                tx.rollback();
+                log.warn("Rollback de transacción de {} realizado.", action);
+            } catch (Exception rbEx) {
+                log.error("Error durante el rollback de {}: {}", action, rbEx.getMessage(), rbEx);
+            }
+        }
+    }
+
+    /**
+     * Cierra el EntityManager si está abierto.
+     *
+     * @param em El EntityManager a cerrar.
+     */
+    private void closeEntityManager(EntityManager em) {
+        if (em != null && em.isOpen()) {
+            em.close();
+        }
+    }
+
+    /**
+     * Mapea excepciones técnicas a excepciones de negocio o RuntimeException.
+     *
+     * @param e La excepción original.
+     * @return La excepción mapeada o una RuntimeException genérica.
+     */
+    private RuntimeException mapException(Exception e) {
+        // Asegurarse de incluir todas las excepciones personalizadas relevantes
+        if (e instanceof EmailExistenteException
+                || e instanceof PasswordIncorrectoException
+                || e instanceof UsuarioNotFoundException
+                // Añadir otras excepciones de negocio si las hubiera
+                || e instanceof IllegalArgumentException
+                || e instanceof SecurityException
+                || e instanceof IllegalStateException
+                || e instanceof PersistenceException
+                || e instanceof RuntimeException) {
+            return (RuntimeException) e;
+        }
+        // Para otras excepciones no esperadas, envolvemos en RuntimeException
+        return new RuntimeException("Error inesperado en la capa de servicio Usuario: " + e.getMessage(), e);
     }
 }
